[package]
name = "zkplogin"
version = "0.1.0"
edition = "2021"
author = ["Mike M. <matchvoip@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
